feat: fix some typos